bug fix for Issue 12890 - Show full result view in query interface too small
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@12623 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/extensions/SMWHalo/skins/QueryInterface/qi.css
+++ b/extensions/SMWHalo/skins/QueryInterface/qi.css
@@ -43,7 +43,6 @@
   color: #0000FF;
   cursor: pointer;
   padding: 5px;
-  vertical-align: bottom;
 }
 
 .qibuttonEmp {
@@ -357,32 +356,12 @@ a.plusminus{
   width:16px;
 }
 
-#fullpreviewbox{
-  position: absolute;
-  z-index: 51;
-  top:10%;
-  left:10%;
-  background:#FFF;
-  border: 2px solid #AAAAAA;
-  padding: 5px;
-}
-
-#fullpreviewTd{
-
-}
 
 #fullpreview{
-  overflow: auto;
-  width: 400px;
-  height: 300px;
-  vertical-align: top;
-  border: 2px solid #AAAAAA;
+/*  overflow: auto;
+  vertical-align: top;  */
 }
 
-#fullpreviewboxTable{
-  width: inherit;
-  height: inherit;
-}
 
 .subquerycell{
   border-left:1px solid;
